# Data_Management_AI_Agent_world

./: README.md  data_pipeline_dag.py  pyproject.toml  report.md  spotify_data_pipeline.py  spotify_history_dag.py  spotify_history_pipeline.py  spotify_history_processing.py  spotify_history_processing_dag.py  tech_design.yaml  transactions_pipeline.py
dags/: spotify_history_processing.py
knowledge/: connection_knowledge.yaml  connections.json
src/data_management_crew/: crew.py  main.py
src/data_management_crew/config/: agents.yaml  tasks.yaml
