[project]
name = "data_management_crew"
version = "0.1.0"
description = "data_management_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "docling>=2.15.1",
]

[project.scripts]
data_management_crew = "data_management_crew.main:run"
run_crew = "data_management_crew.main:run"
train = "data_management_crew.main:train"
replay = "data_management_crew.main:replay"
test = "data_management_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
